# ld51chef

./: Cargo.toml
assets/sprites/: .pan-anim1.png-autosave.kra  Bitter.png.kra  Cool.png.kra  Dry.png.kra  Dry.png~  Salty.png.kra  Savory.png.kra  Sour.png.kra  Spicy.png.kra  Sweet.kra  Sweet.png.kra  Time.png~  bad.png.kra  bad.png~  elena-gnam.png~  feather.png~  guuut.png.kra  lemon.png~  pan-anim1.png.kra  pan-anim1.png~  resist.png.kra  resist.png~  stomach.png~
src/: main.rs
